Set unformatted description (with styling), sorted musicians by membership in projects.